--- a/calendar.html
+++ b/calendar.html
@@ -342,7 +342,7 @@ async function getCachedICS(url) {
   }
 
   // If not, fetch the data
-  return fetch(url,{mode: 'no-cors',headers: {
+  return fetch(url,{mode: 'cors',headers: {
     'Content-Type': 'text/calendar'}})
     .then(response => response.text())
     .then(data => {
