--- a/calendar.html
+++ b/calendar.html
@@ -370,7 +370,7 @@ function getCacheICS(url, cacheDuration = 3600) {
 }
 
     
-document.getElementById('saveImageBtn').document.getElementById('saveButton').addEventListener('click', function() {
+document.getElementById('saveImageBtn').addEventListener('click', function() {
   const calendarEl = document.getElementById('calendar');
   const headerEl = calendarEl.querySelector('.fc-header-toolbar');
 
