--- a/calendar.html
+++ b/calendar.html
@@ -28,7 +28,7 @@ body {
   justify-content: flex-end; /* Push content to the bottom */
   font-family: Arial, sans-serif;
   background-color: #000;
-  color: white;
+  color: black;
 }
     /* The “real” calendar container with a fixed height and dynamic width */
     #calendar {
