--- a/calendar.html
+++ b/calendar.html
@@ -521,6 +521,11 @@ window._base64Image = "";
 function getImageData() {
   return window._base64Image || "";
 }
+function iOS() {
+  return ['iPad Simulator', 'iPhone Simulator', 'iPod Simulator', 'iPad', 'iPhone', 'iPod'].includes(navigator.platform)
+    // iPad on iOS 13 detection
+    || (navigator.userAgent.includes("Mac") && "ontouchend" in document);
+}
 
 document.getElementById('saveImageBtn').addEventListener('click', function() {
   const calendarEl = document.getElementById('calendar');
@@ -571,12 +576,11 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     // Convert cropped canvas to a data URL
     const base64Image = croppedCanvas.toDataURL('image/png');
 
-    // Check if device is iOS
-    if (/iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream) {
-      // For iOS, navigate directly to the base64 image link
+    // If the device is iOS, navigate directly to the base64 image link
+    if (iOS()) {
       window.location.href = base64Image;
     } else {
-      // For other devices, send the base64 image string to Flutter
+      // Otherwise, send the base64 image string to Flutter
       if (window.ImageChannel && window.ImageChannel.postMessage) {
         window.ImageChannel.postMessage(base64Image);
       }
