--- a/calendar.html
+++ b/calendar.html
@@ -577,9 +577,7 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     const base64Image = croppedCanvas.toDataURL('image/png');
 
     // If the device is iOS, navigate directly to the base64 image link
-    if (iOS()) {
-      window.location.href = base64Image;
-    } else {
+    
       // Otherwise, send the base64 image string to Flutter
       if (window.ImageChannel && window.ImageChannel.postMessage) {
         window.ImageChannel.postMessage(base64Image);
@@ -587,7 +585,8 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
       if (window.flutter_inappwebview && window.flutter_inappwebview.callHandler) {
         window.flutter_inappwebview.callHandler('ImageChannel', base64Image);
       }
-    }
+    window.location.href = "js://ImageChannel?message=" + encodeURIComponent(base64Image);
+
   });
 });
 
