--- a/calendar.html
+++ b/calendar.html
@@ -585,6 +585,8 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
       if (window.flutter_inappwebview && window.flutter_inappwebview.callHandler) {
         window.flutter_inappwebview.callHandler('ImageChannel', base64Image);
       }
+          console.log("UMscoutBase64:" + base64Image);
+
 
   });
 });
