--- a/calendar.html
+++ b/calendar.html
@@ -610,16 +610,29 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
 
     // Convert the cropped canvas to a Blob
     croppedCanvas.toBlob(blob => {
-  if (blob) {
-    const url = URL.createObjectURL(blob);
+      if (blob) {
+        const url = URL.createObjectURL(blob);
+        
+        // Notify Flutter
+        if (window.ImageChannel && window.ImageChannel.postMessage) {
+          window.ImageChannel.postMessage("Capture");
+        }
+        if (window.flutter_inappwebview && window.flutter_inappwebview.callHandler) {
+          window.flutter_inappwebview.callHandler('ImageChannel', "Capture");
+        }
+        
+        // Create a download link
+        const link = document.createElement('a');
+        link.href = url;
+        link.download = 'calendar.png';
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
 
-    // Send the URL to Flutter
-    if (window.flutter_inappwebview && window.flutter_inappwebview.callHandler) {
-      window.flutter_inappwebview.callHandler('ImageChannel', url);
-    }
-  }
-}, 'image/png');
-
+        // Revoke the URL after download
+        URL.revokeObjectURL(url);
+      }
+    }, 'image/png');
   });
 });
 
