--- a/calendar.html
+++ b/calendar.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <title>Export Timetable</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- FullCalendar CSS and JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -297,6 +299,8 @@ body {
   </style>
 </head>
 <body>
+  <h1 style="color: white; text-align: center;">Export Timetable</h1>
+
   <!-- Container for header outside the timeline viewport -->
   <div id="calendarHeader" style="max-width:900px; margin:20px auto; text-align:center; color:#fff;"></div>
   <!-- Timeline viewport for the timeline part only -->
