--- a/calendar.html
+++ b/calendar.html
@@ -17,7 +17,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.0/nouislider.min.js"></script>
   <!-- Font Awesome for icons (example) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  
+  <meta name="theme-color" content="#000000">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
   <style>
         :root {
     --fc-today-bg-color: transparent;
