--- a/calendar.html
+++ b/calendar.html
@@ -625,6 +625,7 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
         const imageData = croppedCanvas.toDataURL('image/png');
         const link = document.createElement('a');
         link.href = imageData;
+        link.href = "https://images.unsplash.com/photo-1575936123452-b67c3203c357?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8fDA%3D";
         link.download = `UMscout_Timetable_${Date.now()}.png`;
         document.body.appendChild(link);
         link.click();
