--- a/calendar.html
+++ b/calendar.html
@@ -6,14 +6,15 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- FullCalendar CSS and JS -->
-  <script src="./html2canvas.min.js" crossorigin="anonymous"></script>
-  <script src="./html-to-image.js" integrity="sha512-4W7+nCTcMQMFBnTRwvixN7il649NCqZiBfJ7WvzU7gxF12zOnaKwVYTSIzwrjy/cy+CPQxn2lAIVZIes+rPp2Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="./index.global.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html-to-image/1.11.13/html-to-image.js" integrity="sha512-4W7+nCTcMQMFBnTRwvixN7il649NCqZiBfJ7WvzU7gxF12zOnaKwVYTSIzwrjy/cy+CPQxn2lAIVZIes+rPp2Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/main.min.css" rel="stylesheet" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js" crossorigin="anonymous"></script>
   <!-- ical.js for ICS parsing -->
-  <script src="./ical.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ical.js/1.4.0/ical.min.js" crossorigin="anonymous"></script>
   <!-- noUiSlider CSS and JS for dual slider -->
-  <link href="./nouislider.min.css" rel="stylesheet" crossorigin="anonymous">
-  <script src="./nouislider.min.js" crossorigin="anonymous"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.0/nouislider.min.css" rel="stylesheet" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.0/nouislider.min.js" crossorigin="anonymous"></script>
   <!-- Font Awesome for icons (example) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous">
   <meta name="theme-color" content="#000000">
@@ -559,12 +560,8 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     headerEl.style.visibility = 'hidden';
   }
 
-  htmlToImage.toCanvas(calendarEl, {
-    pixelRatio: 20, // Adjust to a reasonable value
-    backgroundColor: null,
-    quality: 1,
-    useCORS: true
-  }).then(canvas => {
+  // Capture the calendar element
+  html2canvas(calendarEl, { scale: 20, backgroundColor: null, useCORS: true }).then(canvas => {
     // Restore the header after capturing
     if (headerEl) {
       headerEl.style.visibility = '';
@@ -573,55 +570,35 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     const ctx = canvas.getContext('2d');
     const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
     const pixels = imgData.data;
-    const width = canvas.width;
-    const height = canvas.height;
 
-    // Find the bounding box of the content
-    let left = width, right = 0, top = height, bottom = 0;
-
-    for (let y = 0; y < height; y++) {
-      for (let x = 0; x < width; x++) {
-        const index = (y * width + x) * 4;
-        const alpha = pixels[index + 3];
+    // Find the first non-empty row
+    let top = 0;
+    for (let y = 0; y < canvas.height; y++) {
+      let rowEmpty = true;
+      for (let x = 0; x < canvas.width; x++) {
+        const alpha = pixels[(y * canvas.width + x) * 4 + 3];
         if (alpha !== 0) {
-          if (x < left) left = x;
-          if (x > right) right = x;
-          if (y < top) top = y;
-          if (y > bottom) bottom = y;
+          rowEmpty = false;
+          break;
         }
+      }
+      if (!rowEmpty) {
+        top = y;
+        break;
       }
     }
 
-    // Calculate the content dimensions
-    const contentWidth = right - left + 1;
-    const contentHeight = bottom - top + 1;
-
-    // Create the cropped canvas
+    // Crop the canvas
     const croppedCanvas = document.createElement('canvas');
     const croppedCtx = croppedCanvas.getContext('2d');
+    const height = canvas.height - top;
 
-    // Set dimensions to match the content's bounding box
-    croppedCanvas.width = contentWidth;
-    croppedCanvas.height = contentHeight;
+    croppedCanvas.width = canvas.width;
+    croppedCanvas.height = height;
+    croppedCtx.putImageData(ctx.getImageData(0, top, canvas.width, height), 0, 0);
 
-    // Copy the relevant portion of the original canvas
-    croppedCtx.drawImage(
-      canvas,
-      left, top, // Source position
-      contentWidth, contentHeight, // Source size
-      0, 0, // Destination position
-      contentWidth, contentHeight // Destination size
-    );
-
-            // Notify Flutter
-            if (window.ImageChannel && window.ImageChannel.postMessage) {
-          window.ImageChannel.postMessage("Capture");
-        }
-        if (window.flutter_inappwebview && window.flutter_inappwebview.callHandler) {
-          window.flutter_inappwebview.callHandler('ImageChannel', "Capture");
-        }
-        
-        const imageData = croppedCanvas.toDataURL('image/png');
+    // Convert cropped canvas to a data URL
+    const imageData = croppedCanvas.toDataURL('image/png');
 
 // Create an image element to preview the image
 const imgPreview = document.createElement('img');
