--- a/calendar.html
+++ b/calendar.html
@@ -598,31 +598,21 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     croppedCtx.putImageData(ctx.getImageData(0, top, canvas.width, height), 0, 0);
 
     // Convert cropped canvas to a data URL
-    const imageData = croppedCanvas.toDataURL('image/png');
+    const base64Image = croppedCanvas.toDataURL('image/png');
 
-// Create an image element to preview the image
-const imgPreview = document.createElement('img');
-imgPreview.src = imageData;
-imgPreview.alt = 'Timetable Preview';
-imgPreview.style.maxWidth = '100%'; // Ensure it fits within the container
+    // Download the image
+    const link = document.createElement('a');
+    link.href = base64Image;
+    link.download = `UMscout_Timetable_${Date.now()}.png`;
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
 
-// Replace existing content or append it to a specific container
-const container = document.getElementById('preview-container') || document.body;
-container.innerHTML = ''; // Remove existing content if needed
-container.appendChild(imgPreview);
-
-// Create a download link
-const link = document.createElement('a');
-link.href = imageData;
-link.download = `UMscout_Timetable_${Date.now()}.png`;
-link.textContent = 'Download Timetable';
-link.style.display = 'block';
-link.style.marginTop = '10px';
-
-container.appendChild(link);
-
-      });
+    // Replace the entire page with the generated image
+    document.body.innerHTML = `<img src="${base64Image}" style="width: 100%; height: auto; display: block; margin: auto;">`;
+  });
 });
+
 
 
 function generateAndSaveImage() {
