--- a/calendar.html
+++ b/calendar.html
@@ -560,8 +560,12 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     headerEl.style.visibility = 'hidden';
   }
 
-  // Capture the calendar element
-  html2canvas(calendarEl, { scale: 20, backgroundColor: null, useCORS: true }).then(canvas => {
+  htmlToImage.toCanvas(calendarEl, {
+    pixelRatio: 3, // Adjust to a reasonable value
+    backgroundColor: null,
+    quality: 1,
+    useCORS: true
+  }).then(canvas => {
     // Restore the header after capturing
     if (headerEl) {
       headerEl.style.visibility = '';
@@ -570,49 +574,51 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     const ctx = canvas.getContext('2d');
     const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
     const pixels = imgData.data;
+    const width = canvas.width;
+    const height = canvas.height;
 
-    // Find the first non-empty row
-    let top = 0;
-    for (let y = 0; y < canvas.height; y++) {
-      let rowEmpty = true;
-      for (let x = 0; x < canvas.width; x++) {
-        const alpha = pixels[(y * canvas.width + x) * 4 + 3];
+    // Find the bounding box of the content
+    let left = width, right = 0, top = height, bottom = 0;
+
+    for (let y = 0; y < height; y++) {
+      for (let x = 0; x < width; x++) {
+        const index = (y * width + x) * 4;
+        const alpha = pixels[index + 3];
         if (alpha !== 0) {
-          rowEmpty = false;
-          break;
+          if (x < left) left = x;
+          if (x > right) right = x;
+          if (y < top) top = y;
+          if (y > bottom) bottom = y;
         }
-      }
-      if (!rowEmpty) {
-        top = y;
-        break;
       }
     }
 
-    // Crop the canvas
+    // Calculate the content dimensions
+    const contentWidth = right - left + 1;
+    const contentHeight = bottom - top + 1;
+
+    // Create the cropped canvas
     const croppedCanvas = document.createElement('canvas');
     const croppedCtx = croppedCanvas.getContext('2d');
-    const height = canvas.height - top;
 
-    croppedCanvas.width = canvas.width;
-    croppedCanvas.height = height;
-    croppedCtx.putImageData(ctx.getImageData(0, top, canvas.width, height), 0, 0);
+    // Set dimensions to match the content's bounding box
+    croppedCanvas.width = contentWidth;
+    croppedCanvas.height = contentHeight;
 
-    // Convert cropped canvas to a data URL
+    // Copy the relevant portion of the original canvas
+    croppedCtx.drawImage(
+      canvas,
+      left, top, // Source position
+      contentWidth, contentHeight, // Source size
+      0, 0, // Destination position
+      contentWidth, contentHeight // Destination size
+    );
     const base64Image = croppedCanvas.toDataURL('image/png');
-
-    // Download the image
-    const link = document.createElement('a');
-    link.href = base64Image;
-    link.download = `UMscout_Timetable_${Date.now()}.png`;
-    document.body.appendChild(link);
-    link.click();
-    document.body.removeChild(link);
-
-    // Replace the entire page with the generated image
-    document.body.innerHTML = `<img src="${base64Image}" style="width: 100%; height: auto; display: block; margin: auto;">`;
-  });
+  if (window.ImageChannel && window.ImageChannel.postMessage) {
+    window.ImageChannel.postMessage(base64Image);
+  }
+      });
 });
-
 
 
 function generateAndSaveImage() {
