--- a/calendar.html
+++ b/calendar.html
@@ -560,12 +560,8 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     headerEl.style.visibility = 'hidden';
   }
 
-  htmlToImage.toCanvas(calendarEl, {
-    pixelRatio: 3, // Adjust to a reasonable value
-    backgroundColor: null,
-    quality: 1,
-    useCORS: true
-  }).then(canvas => {
+  // Capture the calendar element
+  html2canvas(calendarEl, { scale: 15, backgroundColor: null, useCORS: true }).then(canvas => {
     // Restore the header after capturing
     if (headerEl) {
       headerEl.style.visibility = '';
@@ -574,130 +570,40 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     const ctx = canvas.getContext('2d');
     const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
     const pixels = imgData.data;
-    const width = canvas.width;
-    const height = canvas.height;
 
-    // Find the bounding box of the content
-    let left = width, right = 0, top = height, bottom = 0;
-
-    for (let y = 0; y < height; y++) {
-      for (let x = 0; x < width; x++) {
-        const index = (y * width + x) * 4;
-        const alpha = pixels[index + 3];
+    // Find the first non-empty row
+    let top = 0;
+    for (let y = 0; y < canvas.height; y++) {
+      let rowEmpty = true;
+      for (let x = 0; x < canvas.width; x++) {
+        const alpha = pixels[(y * canvas.width + x) * 4 + 3];
         if (alpha !== 0) {
-          if (x < left) left = x;
-          if (x > right) right = x;
-          if (y < top) top = y;
-          if (y > bottom) bottom = y;
+          rowEmpty = false;
+          break;
         }
+      }
+      if (!rowEmpty) {
+        top = y;
+        break;
       }
     }
 
-    // Calculate the content dimensions
-    const contentWidth = right - left + 1;
-    const contentHeight = bottom - top + 1;
-
-    // Create the cropped canvas
+    // Crop the canvas
     const croppedCanvas = document.createElement('canvas');
     const croppedCtx = croppedCanvas.getContext('2d');
+    const height = canvas.height - top;
 
-    // Set dimensions to match the content's bounding box
-    croppedCanvas.width = contentWidth;
-    croppedCanvas.height = contentHeight;
+    croppedCanvas.width = canvas.width;
+    croppedCanvas.height = height;
+    croppedCtx.putImageData(ctx.getImageData(0, top, canvas.width, height), 0, 0);
 
-    // Copy the relevant portion of the original canvas
-    croppedCtx.drawImage(
-      canvas,
-      left, top, // Source position
-      contentWidth, contentHeight, // Source size
-      0, 0, // Destination position
-      contentWidth, contentHeight // Destination size
-    );
+    // Convert cropped canvas to a data URL
     const base64Image = croppedCanvas.toDataURL('image/png');
   if (window.ImageChannel && window.ImageChannel.postMessage) {
     window.ImageChannel.postMessage(base64Image);
   }
       });
 });
-
-
-function generateAndSaveImage() {
-  const calendarEl = document.getElementById('calendar');
-const headerEl = calendarEl.querySelector('.fc-header-toolbar');
-
-// Temporarily hide the header
-if (headerEl) {
-  headerEl.style.visibility = 'hidden';
-}
-
-htmlToImage.toCanvas(calendarEl, {
-  pixelRatio: 20, // Lower this to a reasonable value (e.g., 2 for HD)
-  backgroundColor: null,
-  quality:1,
-  
-  useCORS: true
-}).then(canvas => {
-  // Restore the header after capturing
-  if (headerEl) {
-    headerEl.style.visibility = '';
-  }
-
-  const ctx = canvas.getContext('2d');
-  const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-  const pixels = imgData.data;
-  const width = canvas.width;
-  const height = canvas.height;
-
-  // Find the bounding box of the content
-  let left = width;
-  let right = 0;
-  let top = height;
-  let bottom = 0;
-
-  for (let y = 0; y < height; y++) {
-    for (let x = 0; x < width; x++) {
-      const index = (y * width + x) * 4;
-      const alpha = pixels[index + 3];
-      if (alpha !== 0) {
-        if (x < left) left = x;
-        if (x > right) right = x;
-        if (y < top) top = y;
-        if (y > bottom) bottom = y;
-      }
-    }
-  }
-
-  // Calculate the content dimensions
-  const contentWidth = right - left + 1;
-  const contentHeight = bottom - top + 1;
-
-  // Create the cropped canvas
-  const croppedCanvas = document.createElement('canvas');
-  const croppedCtx = croppedCanvas.getContext('2d');
-
-  // Set dimensions to match the content's bounding box
-  croppedCanvas.width = contentWidth;
-  croppedCanvas.height = contentHeight;
-
-  // Copy the relevant portion of the original canvas
-  croppedCtx.drawImage(
-    canvas,
-    left, top, // Source position
-    contentWidth, contentHeight, // Source size
-    0, 0, // Destination position
-    contentWidth, contentHeight // Destination size
-  );
-
-  // Convert to data URL and trigger download
-  const base64Image = croppedCanvas.toDataURL('image/png');
-  const link = document.createElement('a');
-  link.href = base64Image;
-  link.download = `UMscout_Timetable_${Date.now()}.png`;
-  document.body.appendChild(link);
-  link.click();
-  document.body.removeChild(link);
-});
-}
 
 let isInitializing = true; // Flag to prevent URL update loops during initialization
 
@@ -1132,9 +1038,9 @@ info.el.style.overflow = 'hidden';
     if (document.getElementById('toggleLocation').checked)
       content += `<div style="color:${usedTextColor};">Location: ${location}</div>`;
     if (document.getElementById('toggleOCC').checked)
-      content += `<div style="text-align:left; background-color:${usedEventColor};color:${usedTextColor}; border-radius:20px; margin-top:4px;margin-right:5px; padding:3px 8px; display:inline-block; font-weight:bold;box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;">${occ}</div>`;
+      content += `<div style="text-align:left; background-color:${usedEventColor};color:${usedTextColor}; border-radius:20px; margin-top:4px;margin-right:5px; padding:3px 8px; display:inline-block; font-weight:bold;border:2px solid ${makeColorPaler(usedTextColor,0.8)}">${occ}</div>`;
     if (document.getElementById('toggleCategory').checked)
-      content += `<div style="text-align:left; background-color:${usedEventColor};color:${usedTextColor}; border-radius:20px; margin-top:4px; padding:3px 8px; display:inline-block; font-weight:bold;box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;">${eventtype}</div>`;
+      content += `<div style="text-align:left; background-color:${usedEventColor};color:${usedTextColor}; border-radius:20px; margin-top:4px; padding:3px 8px; display:inline-block; font-weight:bold;border:2px solid ${makeColorPaler(usedTextColor,0.8)}">${eventtype}</div>`;
     
     content += `</div>`;
 
