--- a/calendar.html
+++ b/calendar.html
@@ -474,19 +474,23 @@ body {
   }
 
 };
-let paddingbackgroundcolor = "#fff";
 
 // Helper function to apply the selected theme
 function applyTheme(themeKey) {
   const theme = themes[themeKey];
   const calendarEl = document.querySelector('.fc-view-harness.fc-view-harness-active');
 
-  // Override the overall calendar background if specified
-  if (theme.calendarBackground) {
-    calendarEl.style.backgroundColor = theme.calendarBackground;
-  } else {
-    calendarEl.style.backgroundColor = '';
-  }
+// Override the overall calendar background if specified
+if (theme.calendarBackground) {
+  calendarEl.style.backgroundColor = theme.calendarBackground;
+} else {
+  calendarEl.style.backgroundColor = '';
+}
+
+// Add border radius and overflow hidden
+calendarEl.style.borderRadius = '15px'; // Adjust the radius as needed
+calendarEl.style.overflow = 'hidden';
+
 
   // Update header cells background and text color
   document.querySelectorAll('.fc-col-header-cell').forEach(cell => {
@@ -511,6 +515,19 @@ function applyTheme(themeKey) {
 
 }
 
+// Function to convert hex to rgba with reduced opacity
+function makeColorPaler(hex, factor = 0.3) {
+  let r = parseInt(hex.slice(1, 3), 16);
+  let g = parseInt(hex.slice(3, 5), 16);
+  let b = parseInt(hex.slice(5, 7), 16);
+
+  // Blend with white by shifting each channel closer to 255
+  r = Math.round(r + (255 - r) * factor);
+  g = Math.round(g + (255 - g) * factor);
+  b = Math.round(b + (255 - b) * factor);
+
+  return `rgb(${r}, ${g}, ${b})`;
+}
 
 
 const urlParams = new URLSearchParams(window.location.search);
@@ -567,9 +584,9 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
   const paddingValues = {
     none: 0,
     small: 200,
-    medium: 400,
-    large: 600,
-    extraLarge: 800
+    medium: 450,
+    large: 900,
+    extraLarge: 1800
   };
 
   const selectedPadding = paddingValues[paddingDropdown.value] || 0;
@@ -579,12 +596,15 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
     headerEl.style.visibility = 'hidden';
   }
 
-  const eventColor =
+  const themeKey = document.getElementById('colorThemeDropdown').value;
+          const theme = themes[themeKey] || themes.default;
+          const eventColor = makeColorPaler(theme.eventBackground,0.4);
+const backgroundColor = selectedPadding === 0 ? null : eventColor;
 
   // Capture the calendar element with transparency
   html2canvas(calendarEl, {
     scale: 10, 
-    backgroundColor: null, 
+    backgroundColor: backgroundColor, 
     useCORS: true
   }).then(canvas => {
     // Restore the header after capturing
@@ -630,7 +650,7 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
 
     // Convert cropped canvas to a data URL
     const base64Image = croppedCanvas.toDataURL('image/png');
-    
+    document.body.appendChild(croppedCanvas);
     if (window.ImageChannel && window.ImageChannel.postMessage) {
       window.ImageChannel.postMessage(base64Image);
     }
@@ -823,19 +843,6 @@ isInitializing = false;
   }
 }
 
-// Function to convert hex to rgba with reduced opacity
-function makeColorPaler(hex, factor = 0.3) {
-  let r = parseInt(hex.slice(1, 3), 16);
-  let g = parseInt(hex.slice(3, 5), 16);
-  let b = parseInt(hex.slice(5, 7), 16);
-
-  // Blend with white by shifting each channel closer to 255
-  r = Math.round(r + (255 - r) * factor);
-  g = Math.round(g + (255 - g) * factor);
-  b = Math.round(b + (255 - b) * factor);
-
-  return `rgb(${r}, ${g}, ${b})`;
-}
 
 
 
@@ -1059,7 +1066,7 @@ info.el.style.overflow = 'hidden';
     // Deconstruct extended props from the event (from ICS parsing)
     const { courseCode, courseName, occ, lecturer, location, eventtype, eventColor } = info.event.extendedProps;
         // Build event content – override event colors if a theme is active (e.g. classic)
-        paddingbackgroundcolor = makeColorPaler(theme.calendarBackground, 0.4);
+        paddingbackgroundcolor = makeColorPaler(theme.eventBackground, 0.4);
         console.log(theme.eventBackground);
         let usedEventColor = 
     (theme.eventBackground === "#ffffff" || eventColor === "white") ? "#EDECEC" : 
