--- a/calendar.html
+++ b/calendar.html
@@ -488,7 +488,7 @@ if (theme.calendarBackground) {
 }
 
 // Add border radius and overflow hidden
-calendarEl.style.borderRadius = '15px'; // Adjust the radius as needed
+calendarEl.style.borderRadius = '30px';
 calendarEl.style.overflow = 'hidden';
 
 
