--- a/calendar.html
+++ b/calendar.html
@@ -387,7 +387,7 @@ body {
           </select>
       
           <select id="paddingDropdown" style="padding: 6px; border-radius: 15px; border: none;">
-            <option value="none">None</option>
+            <option value="none">Padding - None</option>
             <option value="small">Small</option>
             <option value="medium">Medium</option>
             <option value="large">Large</option>
